--- a/package.json
+++ b/package.json
@@ -1,9 +1,27 @@
 {
   "name": "express-status",
-  "version": "0.0.1",
-  "description": "An express status check default endpoing",
-  "main": "index.js",
-  "repo": "git@bitbucket.org:QuBitProducts/express-status.git",
-  "author": "Jing Dong",
-  "license": "ISC"
+  "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/QubitProducts/express-status.git"
+  },
+  "description": "Installs a /status endpoint that will always respond with 200 if the server is up.",
+  "main": "express-status.js",
+  "author": "Rob Tod <roberttod@gmail.com>",
+  "scripts": {
+    "test": "make test"
+  },
+  "keywords": [
+    "express",
+    "middleware",
+    "status"
+  ],
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^3.3.0",
+    "express": "^4.13.3",
+    "mocha": "^2.3.3",
+    "request-promise": "^0.4.3",
+    "standard": "^5.3.1"
+  }
 }
